--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 記錄每個學習過程
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: JHOU JHOU
+language: zh-tw
 timezone: ''
 
 # URL
@@ -93,7 +93,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: snippet
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
