--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 學習
+title: 紀錄
 subtitle: ''
 description: 'Continuous learning'
 keywords:
